--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
                 <button class="btn">MVP</button>
             </div>
         </header>
-        <div class="pres">
+        <div class="container">
+            <h1>Présentation du projet</h1>
+            <div id="presentation">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti optio amet vitae qui? Atque
+                    deserunt, ratione explicabo autem sapiente voluptates reprehenderit sed illo alias mollitia, tenetur
+                    quasi veritatis voluptas eveniet!</p>
+            </div>
+            <div id="team"></div>
+            <div id="mvp"></div>
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         </div>
     </div>
