--- a/index.html
+++ b/index.html
@@ -48,27 +48,27 @@
             <div id="teamH"></div>
             <h1>L'équipe</h1>
             <div class="presentation" id="team">
-                <div class="personne"><img src="/ressources/img/lucas.png" alt="">
+                <div class="personne"><img src="/ressources/img/lucass.png" alt="">
                     <h2>Lucas<br>REBOULET</h2>
                     <h3>B2 Informatique</h3>
                 </div>
-                <div class="personne"><img src="/ressources/img/lucas.png" alt="">
+                <div class="personne"><img src="/ressources/img/lucass.png" alt="">
                     <h2>Jean-Philippe<br>CAETANO</h2>
                     <h3>B3 Data & IA</h3>
                 </div>
-                <div class="personne"><img src="/ressources/img/lucas.png" alt="">
+                <div class="personne"><img src="/ressources/img/lucass.png" alt="">
                     <h2>Lukas<br>CRISTOFARO</h2>
                     <h3>B2 Informatique</h3>
                 </div>
-                <div class="personne"><img src="/ressources/img/lucas.png" alt="">
+                <div class="personne"><img src="/ressources/img/lucass.png" alt="">
                     <h2>Benjamin<br>VERNET</h2>
                     <h3>B3 Dev</h3>
                 </div>
-                <div class="personne"><img src="/ressources/img/lucas.png" alt="">
+                <div class="personne"><img src="/ressources/img/lucass.png" alt="">
                     <h2>Loan<br>FRANÇOIS</h2>
                     <h3>B3 Dev</h3>
                 </div>
-                <div class="personne"><img src="/ressources/img/lucas.png" alt="">
+                <div class="personne"><img src="/ressources/img/lucass.png" alt="">
                     <h2>Gabriel<br>MARIE</h2>
                     <h3>B2 Informatique</h3>
                 </div>
@@ -78,8 +78,8 @@
             <div class="presentation" id="mvp">
 
             </div>
-            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         </div>
+        <div class="bottomdiv"></div>
     </div>
 </body>
 
