--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div id="teamH"></div>
             <h1>L'équipe</h1>
             <div class="presentation" id="team">
-                <div class="personne"><img src="/ressources/img/lucass.png" alt="">
+                <div class="personne"><img src="/ressources/img/lucasboss.png" alt="">
                     <h2>Lucas<br>REBOULET</h2>
                     <h3>B2 Informatique</h3>
                 </div>
@@ -56,7 +56,7 @@
                     <h2>Jean-Philippe<br>CAETANO</h2>
                     <h3>B3 Data & IA</h3>
                 </div>
-                <div class="personne"><img src="/ressources/img/lucass.png" alt="">
+                <div class="personne"><img src="/ressources/img/lukas.jpg" alt="">
                     <h2>Lukas<br>CRISTOFARO</h2>
                     <h3>B2 Informatique</h3>
                 </div>
@@ -68,7 +68,7 @@
                     <h2>Loan<br>FRANÇOIS</h2>
                     <h3>B3 Dev</h3>
                 </div>
-                <div class="personne"><img src="/ressources/img/lucass.png" alt="">
+                <div class="personne"><img src="/ressources/img/gabriel.jpg" alt="">
                     <h2>Gabriel<br>MARIE</h2>
                     <h3>B2 Informatique</h3>
                 </div>
