--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <h2>Lucas<br>REBOULET</h2>
                     <h3>B2 Informatique</h3>
                 </div>
-                <div class="personne"><img src="/ressources/img/lucass.png" alt="">
+                <div class="personne"><img src="/ressources/img/jp.jpg" alt="">
                     <h2>Jean-Philippe<br>CAETANO</h2>
                     <h3>B3 Data & IA</h3>
                 </div>
