--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YLocoTunes</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="/ressources/img/icon.png" />
 </head>
 
 <body class="bg-dots-lighter">
@@ -60,11 +61,11 @@
                     <h2>Lukas<br>CRISTOFARO</h2>
                     <h3>B2 Informatique</h3>
                 </div>
-                <div class="personne"><img src="/ressources/img/lucass.png" alt="">
+                <div class="personne"><img src="/ressources/img/benjamin.jpg" alt="">
                     <h2>Benjamin<br>VERNET</h2>
                     <h3>B3 Dev</h3>
                 </div>
-                <div class="personne"><img src="/ressources/img/lucass.png" alt="">
+                <div class="personne"><img src="/ressources/img/loan.jpg" alt="">
                     <h2>Loan<br>FRANÇOIS</h2>
                     <h3>B3 Dev</h3>
                 </div>
