--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YLocoTunes</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="ressources/img/icon.png" />
+    <link rel="icon" type="image/png" href="./ressources/img/icon.png" />
 </head>
 
 <body class="bg-dots-lighter">
@@ -14,7 +14,7 @@
         <div id="blurdiv" onclick="hidediv()"></div>
         <header>
             <div class="transparent-header">
-                <img src="ressources/img/logo.png" alt="" srcset="" class="header-image">
+                <img src="./ressources/img/logo.png" alt="" srcset="" class="header-image">
                 <div class="header-buttons">
                     <button class="btn" onclick="location.href='#container'">Présentation</button>
                     <button class="btn" onclick="location.href='#teamH'">L'équipe</button>
@@ -53,23 +53,23 @@
                     <h2>Lucas<br>REBOULET</h2>
                     <h3>B2 Informatique</h3>
                 </div>
-                <div class="personne"><img src="ressources/img/jp.jpg" alt="">
+                <div class="personne"><img src="./ressources/img/jp.jpg" alt="">
                     <h2>Jean-Philippe<br>CAETANO</h2>
                     <h3>B3 Data & IA</h3>
                 </div>
-                <div class="personne"><img src="ressources/img/lukas.jpg" alt="">
+                <div class="personne"><img src="./ressources/img/lukas.jpg" alt="">
                     <h2>Lukas<br>CRISTOFARO</h2>
                     <h3>B2 Informatique</h3>
                 </div>
-                <div class="personne"><img src="ressources/img/benjamin.jpg" alt="">
+                <div class="personne"><img src="./ressources/img/benjamin.jpg" alt="">
                     <h2>Benjamin<br>VERNET</h2>
                     <h3>B3 Dev</h3>
                 </div>
-                <div class="personne"><img src="ressources/img/loan.jpg" alt="">
+                <div class="personne"><img src="./ressources/img/loan.jpg" alt="">
                     <h2>Loan<br>FRANÇOIS</h2>
                     <h3>B3 Dev</h3>
                 </div>
-                <div class="personne"><img src="ressources/img/gabriel.jpg" alt="">
+                <div class="personne"><img src="./ressources/img/gabriel.jpg" alt="">
                     <h2>Gabriel<br>MARIE</h2>
                     <h3>B2 Informatique</h3>
                 </div>
