--- a/index.html
+++ b/index.html
@@ -41,10 +41,34 @@
         <div class="container" id="container">
             <h1>Présentation du projet</h1>
             <div class="presentation" id="presentation">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti optio amet vitae qui? Atque
-                    deserunt, ratione explicabo autem sapiente voluptates reprehenderit sed illo alias mollitia,
-                    tenetur
-                    quasi veritatis voluptas eveniet!</p>
+                <p>Découverte d'artistes locaux - YLocoTunes
+
+
+
+                    Web app qui propose à son utilisateur de découvrir des artistes / concerts / évènements autour de la
+                    musique en fonction de sa localisation et de ses goûts.
+
+
+
+                    Fonctionnalités MVP :
+
+                    Détecter sa localisation
+
+                    Filtres par genre, style de musique, etc...
+
+                    Proposer une liste d'artistes / évènements / concerts ==> mettre les 5 derniers titres (stockage
+                    lambda into S3 ?)
+
+                    Système de comptes
+
+
+
+                    Bonus :
+
+                    Dataviz sur les lieux où il y a le plus de concerts (phpChart ?)
+
+                    Boutons pour like l'artiste, un autre pour dire qu'on y va ==> Mettre en avant les artistes /
+                    concerts / lieux en fonction du nombre de clics </p>
             </div>
             <div id="teamH"></div>
             <h1>L'équipe</h1>
