--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div id="teamH"></div>
             <h1>L'équipe</h1>
             <div class="presentation" id="team">
-                <div class="personne"><img src="./ressources/img/lucasboss.png" alt="">
+                <div class="personne"><img src="./ressources/img/lucas.png" alt="">
                     <h2>Lucas<br>REBOULET</h2>
                     <h3>B2 Informatique</h3>
                 </div>
