--- a/index.html
+++ b/index.html
@@ -41,34 +41,22 @@
         <div class="container" id="container">
             <h1>Présentation du projet</h1>
             <div class="presentation" id="presentation">
-                <p>Découverte d'artistes locaux - YLocoTunes
+                <h2>YLocoTunes - Découverte d'artistes locaux</h2>
 
+                <h3>Fonctionnalités MVP :</h3>
+                <ol>
+                    <li>Détection de localisation : Le système est capable de détecter automatiquement la position de
+                        l'utilisateur.</li>
+                    <li>Filtrage personnalisé : Les utilisateurs peuvent filtrer les résultats par genre, style de
+                        musique, et plus encore.</li>
+                    <li>Liste d'artistes et d'évènements : Présentation des cinq derniers titres.</li>
+                    <li>Gestion de comptes : Mise en place d'un système de comptes pour une expérience utilisateur
+                        personnalisée.</li>
+                </ol>
 
-
-                    Web app qui propose à son utilisateur de découvrir des artistes / concerts / évènements autour de la
-                    musique en fonction de sa localisation et de ses goûts.
-
-
-
-                    Fonctionnalités MVP :
-
-                    Détecter sa localisation
-
-                    Filtres par genre, style de musique, etc...
-
-                    Proposer une liste d'artistes / évènements / concerts ==> mettre les 5 derniers titres (stockage
-                    lambda into S3 ?)
-
-                    Système de comptes
-
-
-
-                    Bonus :
-
-                    Dataviz sur les lieux où il y a le plus de concerts (phpChart ?)
-
-                    Boutons pour like l'artiste, un autre pour dire qu'on y va ==> Mettre en avant les artistes /
-                    concerts / lieux en fonction du nombre de clics </p>
+                <p>Avec YLocoTunes, les utilisateurs peuvent non seulement explorer la richesse de la scène musicale
+                    locale, mais également participer activement à son dynamisme en découvrant de nouveaux talents et en
+                    soutenant leurs artistes préférés.</p>
             </div>
             <div id="teamH"></div>
             <h1>L'équipe</h1>
