--- a/index.html
+++ b/index.html
@@ -45,22 +45,29 @@
 
                 <h3>Fonctionnalités MVP :</h3>
                 <ol>
-                    <li>Détection de localisation : Le système est capable de détecter automatiquement la position de
+                    <li><strong>Détection de localisation :</strong> Le système est capable de détecter automatiquement
+                        la position de
                         l'utilisateur.</li>
-                    <li>Filtrage personnalisé : Les utilisateurs peuvent filtrer les résultats par genre, style de
+                    <li><strong>Filtrage personnalisé :</strong> Les utilisateurs peuvent filtrer les résultats par
+                        genre, style de
                         musique, et plus encore.</li>
-                    <li>Liste d'artistes et d'évènements : Présentation des cinq derniers titres.</li>
-                    <li>Gestion de comptes : Mise en place d'un système de comptes pour une expérience utilisateur
+                    <li><strong>Liste d'artistes et d'évènements :</strong> Présentation des cinq derniers titres.</li>
+                    <li><strong>Gestion de comptes :</strong> Mise en place d'un système de comptes pour une expérience
+                        utilisateur
                         personnalisée.</li>
                 </ol>
 
-                <p>Avec YLocoTunes, les utilisateurs peuvent non seulement explorer la richesse de la scène musicale
-                    locale, mais également participer activement à son dynamisme en découvrant de nouveaux talents et en
-                    soutenant leurs artistes préférés.</p>
+                <p>Avec <strong>YLocoTunes</strong>, les utilisateurs peuvent non seulement <strong>explorer la richesse
+                        de la
+                        scène musicale
+                        locale</strong>, mais également participer activement à son <strong>dynamisme</strong> en
+                    découvrant de nouveaux
+                    talents et en
+                    soutenant leurs artistes <strong>préférés</strong>.</p>
             </div>
             <div id="teamH"></div>
             <h1>L'équipe</h1>
-            <div class="presentation" id="team">
+            <div class="presentation2" id="team">
                 <div class="personne"><img src="./ressources/img/lucasboss.png" alt="">
                     <h2>Lucas<br>REBOULET</h2>
                     <h3>B2 Informatique</h3>
@@ -88,7 +95,7 @@
             </div>
             <div id="mvpH"></div>
             <h1>Le MVP</h1>
-            <div class="presentation" id="mvp">
+            <div class="presentation2" id="mvp">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/bUcXzSIKnkY?si=t8j_i9dvYpUv2KxR"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
