--- a/index.html
+++ b/index.html
@@ -95,11 +95,23 @@
             </div>
             <div id="mvpH"></div>
             <h1>Le MVP</h1>
-            <div class="presentation2" id="mvp">
+            <div class="presentation3" id="mvp">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/bUcXzSIKnkY?si=t8j_i9dvYpUv2KxR"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
+                <div class="diff">
+                    <h2>Bonus pour la V2 :</h2>
+                    <ol>
+                        <li>Datavisualisation des lieux de concerts : Utilisation de phpChart pour visualiser les
+                            endroits où se déroulent le plus de concerts, offrant ainsi une perspective claire aux
+                            utilisateurs.</li><br>
+                        <li>Interaction utilisateur avancée : Intégration de boutons permettant aux utilisateurs
+                            d'exprimer leur appréciation pour un artiste (bouton "like") et leur intention d'assister à
+                            un événement (bouton "je participe"), mettant ainsi en avant les artistes, les concerts et
+                            les lieux les plus populaires en fonction du nombre de clics.</li>
+                    </ol>
+                </div>
             </div>
         </div>
         <div class="bottomdiv"></div>
