--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
                         <li>Interaction utilisateur avancée : Intégration de boutons permettant aux utilisateurs
                             d'exprimer leur appréciation pour un artiste (bouton "like") et leur intention d'assister à
                             un événement (bouton "je participe"), mettant ainsi en avant les artistes, les concerts et
-                            les lieux les plus populaires en fonction du nombre de clics.</li>
+                            les lieux les plus populaires en fonction du nombre de clics.</li><br>
+                        <li>Sauvegarde de template de filtres.</li>
                     </ol>
                 </div>
             </div>
