--- a/index.html
+++ b/index.html
@@ -103,14 +103,16 @@
                 <div class="diff">
                     <h2>Bonus pour la V2 :</h2>
                     <ol>
-                        <li>Datavisualisation des lieux de concerts : Utilisation de phpChart pour visualiser les
+                        <li><strong>Datavisualisation des lieux de concerts :</strong> Utilisation de phpChart pour
+                            visualiser les
                             endroits où se déroulent le plus de concerts, offrant ainsi une perspective claire aux
                             utilisateurs.</li><br>
-                        <li>Interaction utilisateur avancée : Intégration de boutons permettant aux utilisateurs
+                        <li><strong>Interaction utilisateur avancée :</strong> Intégration de boutons permettant aux
+                            utilisateurs
                             d'exprimer leur appréciation pour un artiste (bouton "like") et leur intention d'assister à
                             un événement (bouton "je participe"), mettant ainsi en avant les artistes, les concerts et
                             les lieux les plus populaires en fonction du nombre de clics.</li><br>
-                        <li>Sauvegarde de template de filtres.</li>
+                        <li><strong>Sauvegarde de template de filtres.</strong></li>
                     </ol>
                 </div>
             </div>
