--- a/index.html
+++ b/index.html
@@ -71,26 +71,32 @@
                 <div class="personne"><img src="./ressources/img/lucasboss.png" alt="">
                     <h2>Lucas<br>REBOULET</h2>
                     <h3>B2 Informatique</h3>
+                    <h4>Front-end / page Log-in & Register</h4>
                 </div>
                 <div class="personne"><img src="./ressources/img/jp.jpg" alt="">
                     <h2>Jean-Philippe<br>CAETANO</h2>
                     <h3>B3 Data & IA</h3>
+                    <h4>Développeur Back-end</h4>
                 </div>
                 <div class="personne"><img src="./ressources/img/lukas.jpg" alt="">
                     <h2>Lukas<br>CRISTOFARO</h2>
                     <h3>B2 Informatique</h3>
+                    <h4>Front-end / page Résultats</h4>
                 </div>
                 <div class="personne"><img src="./ressources/img/benjamin.jpg" alt="">
                     <h2>Benjamin<br>VERNET</h2>
                     <h3>B3 Dev</h3>
+                    <h4>Développeur Back-end</h4>
                 </div>
                 <div class="personne"><img src="./ressources/img/loan.jpg" alt="">
                     <h2>Loan<br>FRANÇOIS</h2>
                     <h3>B3 Dev</h3>
+                    <h4>Développeur Back-end</h4>
                 </div>
                 <div class="personne"><img src="./ressources/img/gabriel.jpg" alt="">
                     <h2>Gabriel<br>MARIE</h2>
                     <h3>B2 Informatique</h3>
+                    <h4>Front-end / Site vitrine & page Profil</h4>
                 </div>
             </div>
             <div id="mvpH"></div>
